# phantom-tic-tac-toe

./: .gitignore  .gitmodules  README.md  questions
src/cpp/: CMakeLists.txt  evaluator.hpp  io.hpp  loaded_game.hpp  main.cpp  main_pttt.cpp  main_rps.cpp  mccfr.hpp  mccfr_es.hpp  paths.hpp  phantom_ttt.hpp  pttt.hpp  pttt_game_dynamics.hpp  pttt_paths.hpp  rps.hpp  scratch.cpp  scratch_sm.cpp  strategy.hpp
src/python/: game.py  game_description.py  main.py  regret_minimizer.py
